--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <h3 class="f-p">Computer Science Student</h3>
         </div>
           <div class="home-btn">
-            <a href="./Narendra's_resume.pdf" class="btn" id="dnd-rsm-btn">Download Resume</a>
+            <a href="./resume_narendra.pdf" class="btn" id="dnd-rsm-btn">Download Resume</a>
             <a href="#contact" class="btn" id="cnt-info-btn">Contact Info</a>
           </div>
           <div class="social-media">
