--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
        <a href="#about">About</a>
        <a href="#education">Education</a>
        <a href="#projects">Projects</a>
-       <a href="#contact">Contact</a>
+       <a href="#home">Profile</a>
       </div>
     </nav>
   </footer>
