--- a/index.html
+++ b/index.html
@@ -61,12 +61,19 @@
   <section id="about">
     <div class="abt-container" id="abt-bgd">
       <div class="img-abt">
-        <img id="abt-img" src="./upl.jpg" alt="img">
+        <img id="abt-img" src="./picture_narendra.jpg" alt="img">
       </div>
       <div class="abt-cnt">
         <h1 class="main-p" id="abt-pm">About  <span>Me</span></h1>
         <h3>Computer Science engineering Student</h3>
-        <p>As a passionate and enthusiastic software engineering student, I possess a strong foundation in programming languages such as Python, java, C and C++ along with hands-on experience in data science and full-stack web development projects. With a keen interest in web development, data science and machine learning I am eager to leverage my academic background and practical skills to contribute effectively to innovative projects in the tech industry. My goal is to continuously expand my knowledge and expertise while delivering high-quality solutions that meet both user needs and business objectives.</p>
+          <p>Motivated and detail-oriented Computer Science student with a strong foundation
+            in software development, algorithms, and data structures. Proficient in multiple
+            programming languages including Python, Java, and C++ with proficiency in SQL
+            and Tableau. Demonstrates excellent problem-solving abilities and a passion for
+            developing innovative solutions. Experienced in both collaborative team
+            environments and individual projects. Adept at quickly learning new technologies
+            and adapting to dynamic project requirements.
+            </p>
       </div>
     </div>
   </section>  
@@ -104,7 +111,7 @@
   <section id="projects">
     <h3>Latest <span>Projects</span></h3>
     <div class="proj-cont-holder">
-      <div class="proj">
+      <div class="proj" id="one">
         <h4>IBM HR Data Analysis</h4>
         <i class="fa-solid fa-up-right-from-square" onclick="location.href='https://github.com/narendranandagiri/IBM-HR-Analytics-Employee-Attrition-prediction'"></i>
       </div>
@@ -113,12 +120,8 @@
         <i class="fa-solid fa-up-right-from-square" onclick="location.href='https://github.com/narendranandagiri/BigMartSales'"></i>
       </div>
       <div class="proj">
-        <h4>Used Car Prediction system</h4>
-        <i class="fa-solid fa-up-right-from-square" onclick="location.href='https://github.com/narendranandagiri/Used-car-price-prediction'"></i>
-      </div>
-      <div class="proj">
-        <h4>Credit card approval system</h4>
-        <i class="fa-solid fa-up-right-from-square" onclick="location.href='https://github.com/narendranandagiri/Credit-card-approval-prediction'"></i>
+        <h4>Fine-Tuning-Gemma-2b</h4>
+        <i class="fa-solid fa-up-right-from-square" onclick="location.href='https://github.com/narendranandagiri/fine-tuning-gemma-2b'"></i>
       </div>
     </div>
   </section>
